# vgvf

./: Cargo.toml  README.md  README.typ  output.html  player.html  renovate.json  sample.vgv
src/: cli.rs  encoder.rs  lib.rs  parser.rs  renderer.rs
src/encoders/: html.rs  mod.rs  mp4.rs
src/renderers/: html.rs  mod.rs
src/transcoders/: html.rs  mod.rs  mp4.rs
