[package]
name = "vgv"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "vgv"
path = "src/cli.rs"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
diff-match-patch-rs = "0.5.1"
pico-args = "0.5.0"
resvg = "0.45.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tiny-skia = "0.11.4"
usvg = "0.45.1"
